[package]
name = "xhci_hcd-rebind"
version = "0.1.0"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "Monitor xhci_hcd bus, restart if bus failure"
documentation = ""
homepage = ""
license = ""
readme = ""
repository = ""

edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive"] }
config = { version = "0.13.2", default-features = false, features = ["toml"] }
duct = "0.13.5"
mimalloc = "0.1.30"
once_cell = "1.15.0"
regex = "1.6.0"
systemd = { version = "0.10.0", default-features = false, features = [
    "journal",
] }
tracing = { version = "0.1.37", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
    "fmt",
], default-features = false }
